# debug-et-diagnostics

./: .gitignore  .lib.sh  Cargo.toml  README.md  fix-test-error.sed  fix-test.sh
examples/: demo.rs
src/: color.rs  lib.rs  macros.rs  table.html  table.rs
tests/: test_color.rs  test_color_bright.rs  test_color_dark.rs  test_color_from_byte.rs  test_color_from_bytes.rs  test_color_from_display.rs  test_color_get_ansi_rgb.rs  test_color_invert_ansi.rs  test_macros.rs
