[package]
name = "debug-et-diagnostics"
version = "0.1.4"
edition = "2024"
description = "set of macros and tools to colorfully debug and diagnose non-trivial code"
documentation = "https://docs.rs/debug-et-diagnostics"
readme = "README.md"
homepage = "https://github.com/gabrielfalcao/debug-et-diagnostics"
license = "MIT"
keywords = ["debug", "macros", "trace"]
authors = ["Gabriel DeMoura <gabrielteratos@gmail.com>"]
categories = ["development-tools::debugging"]
autotests = false


[[test]]
name = "test_color_get_ansi_rgb"
path = "./tests/test_color_get_ansi_rgb.rs"

[[test]]
name = "test_color"
path = "./tests/test_color.rs"

[[test]]
name = "test_color_from_byte"
path = "./tests/test_color_from_byte.rs"

[[test]]
name = "test_color_from_bytes"
path = "./tests/test_color_from_bytes.rs"

[[test]]
name = "test_macros"
path = "tests/test_macros.rs"

[dependencies]
ansi_colours = "1.2.3"
